<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/profile_item"
        android:icon="@drawable/ic_profile"
        android:menuCategory="container"
        android:title="@string/profile" />
    <item
        android:id="@+id/chats_item"
        android:icon="@drawable/ic_chats"
        android:menuCategory="container"
        android:title="@string/chats" />

    <item
        android:id="@+id/initiative_item"
        android:icon="@drawable/ic_accessibility"
        android:menuCategory="container"
        android:title="@string/initiative" />

    <item
        android:id="@+id/settings_item"
        android:icon="@drawable/ic_settings"
        android:menuCategory="system"
        android:title="@string/settings" />

    <item
        android:id="@+id/sign_out_item"
        android:icon="@drawable/ic_logout"
        android:menuCategory="system"
        android:title="@string/logout" />
</menu>