<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_nav_graph"
    app:startDestination="@id/filterFragment">

    <fragment
        android:id="@+id/filterFragment"
        android:name="com.kravchenko.apps.gooddeed.screen.filterwindow.FilterFragmentMain"
        android:label="@string/filter_fragment_label"
        tools:layout="@layout/fragment_filter_main" >
        <action
            android:id="@+id/action_filterFragment_to_categoryFilterFragment"
            app:destination="@id/categoryFilterFragment" />
        <action
            android:id="@+id/action_filterFragment_to_radiusFilterFragment"
            app:destination="@id/radiusFilterFragment" />
        <action
            android:id="@+id/action_filterFragment_to_periodRealizationFilterFragment"
            app:destination="@id/periodRealizationFilterFragment" />
        <action
            android:id="@+id/action_filterFragment_to_performerInitiativeFragment"
            app:destination="@id/performerInitiativeFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoryFilterFragment"
        android:name="com.kravchenko.apps.gooddeed.screen.filterwindow.CategoryFilterFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category_filter" />
    <fragment
        android:id="@+id/radiusFilterFragment"
        android:name="com.kravchenko.apps.gooddeed.screen.filterwindow.RadiusFilterFragment"
        android:label="@string/change_radius_filter"
        tools:layout="@layout/fragment_radius_filter" />
    <fragment
        android:id="@+id/periodRealizationFilterFragment"
        android:name="com.kravchenko.apps.gooddeed.screen.filterwindow.PeriodRealizationFilterFragment"
        android:label="@string/period_realization"
        tools:layout="@layout/fragment_period_realization_filter" />
    <fragment
        android:id="@+id/performerInitiativeFragment"
        android:name="com.kravchenko.apps.gooddeed.screen.filterwindow.PerformerInitiativeFragment"
        android:label="@string/performer_initiative"
        tools:layout="@layout/fragment_performer_initiative_filter" />
</navigation>