<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.initiative.CurrentInitiativeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green"
            app:menu="@menu/profile_menu"
            app:title="Current Initiative"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:weightSum="2"
      android:orientation="horizontal">

      <TextView
          android:id="@+id/category_textview"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:padding="@dimen/padding_5dp"
          android:layout_margin="@dimen/margin_10dp"
          android:background="@drawable/search_view"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:text="@string/category" />

      <TextView
          android:id="@+id/status_textview"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:padding="@dimen/padding_5dp"
          android:layout_margin="@dimen/margin_10dp"
          android:background="@drawable/search_view"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:text="@string/status" />

  </LinearLayout>

    <TextView
        android:id="@+id/description_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_5dp"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@drawable/search_view"
        android:textColor="@color/black"
        android:text="@string/description" />


    <ImageView
        android:id="@+id/photo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_5dp"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@drawable/search_view"
        android:src="@drawable/photogeo"
        android:contentDescription="@string/photo_for_the_initiative" />

    <Button
        android:id="@+id/open_chat_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@drawable/rounded_view"
        android:text="@string/open_chat_to_discuss" />

    <Button
        android:id="@+id/open_map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@drawable/rounded_view"
        android:text="@string/open_on_map" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>